新增: APT Processor学习

--- a/settings.gradle
+++ b/settings.gradle
@@ -10,4 +10,6 @@ rootProject.name = "GradleRouter"
 include ':BuildSrcApp'
 include ':PluginModule:PluginApp'
 include ':PluginModule:RouterPlugin'
-
+include ':APTRouterModule:APTAnnotation'
+include ':APTRouterModule:APTProcessor'
+include ':APTRouterModule:APTRouterApp'
