--- a/APTRouterModule/APTProcessor/build.gradle
+++ b/APTRouterModule/APTProcessor/build.gradle
@@ -5,4 +5,7 @@ sourceCompatibility = JavaVersion.VERSION_1_8
 
 dependencies {
     implementation project(":APTRouterModule:APTAnnotation")
+
+    implementation 'com.google.auto.service:auto-service:1.0-rc6'
+    annotationProcessor 'com.google.auto.service:auto-service:1.0-rc6'
 }
