--- a/APTRouterModule/APTRouterApp/build.gradle
+++ b/APTRouterModule/APTRouterApp/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
 
     implementation project(":APTRouterModule:APTAnnotation")
+    annotationProcessor project(":APTRouterModule:APTProcessor")
 }
