新增: 删除无用build目录配置

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,11 @@
 .cxx
 local.properties
 .idea
+/APTRouterModule/APTAnnotation/build
+/APTRouterModule/APTProcessor/build
+/APTRouterModule/APTRouterApp/build
+/BuildSrcApp/build
+/buildSrc/build
+/PluginModule/PluginApp/build
+/PluginModule/RouterPlugin/build
+
