--- a/settings.gradle
+++ b/settings.gradle
@@ -13,3 +13,4 @@ include ':PluginModule:RouterPlugin'
 include ':APTRouterModule:APTAnnotation'
 include ':APTRouterModule:APTProcessor'
 include ':APTRouterModule:APTRouterApp'
+include ':FlavorAndSplitsModule'
