--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,7 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 org.gradle.java.home=D\:\\Developer\\Environment\\Java\\Java16
+
+pomUrl=../repo
+groupId=com.doing.apt.router
+version=0.0.1
