ADD: 新增Android Gradle Plugin属性测试模块

--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,4 @@ include ':APTRouterModule:APTAnnotation'
 include ':APTRouterModule:APTProcessor'
 include ':APTRouterModule:APTRouterApp'
 include ':FlavorAndSplitsModule'
+include ':AndroidGradleModule'
