ADD: 解决注解处理器编译问题，修改编译环境全为1.8就解决了

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,7 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+org.gradle.jvmargs=--illegal-access=permit
 org.gradle.java.home=D\:\\Developer\\Environment\\Java\\Java16
 
 pomUrl=../repo
